# GameOfLife

./: Makefile  README.md  a.out  logic.c  logic.h  main.c
.github/workflows/: CI.yml  ccpp.yml  test.yml
Step1-MakeFile/: dconfig
Step1-MakeFile/source/: ansi_gui.c  logic.h  main.c
Step2-CMake/: CMakeLists.txt  dconfig  main.c
Step2-CMake/console/: CMakeLists.txt  ansi_gui.h
Step2-CMake/game/: CMakeLists.txt  logic.c
Step4-SDL/: CMakeLists.txt  dconfig  main.c
Step4-SDL/game/: CMakeLists.txt  logic.c  logic.h
Step4-SDL/sdl/: CMakeLists.txt  sdl.c  sdl.h
Unit_Tests/: CMakeLists.txt  CUnit_tests.c  CUnit_tests.h  gameoflife.c  gameoflife.h
source/: logic.c
